--- a/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
+++ b/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
@@ -46,11 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bakim_Toplama_ayrimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bakim_Toplama_ayrimi.Designer.cs">
+      <DependentUpon>Bakim_Toplama_ayrimi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Bilgisayar_bakim_main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Bilgisayar_bakim_main.Designer.cs">
       <DependentUpon>Bilgisayar_bakim_main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -66,11 +78,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Bakim_Toplama_ayrimi.resx">
+      <DependentUpon>Bakim_Toplama_ayrimi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Bilgisayar_bakim_main.resx">
       <DependentUpon>Bilgisayar_bakim_main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Bilgisayar_topla_main.resx">
       <DependentUpon>Bilgisayar_topla_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
