--- a/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
+++ b/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
@@ -79,6 +79,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql_degiskenleri\Sql_operation.cs" />
+    <Compile Include="ToplananPcGetir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ToplananPcGetir.Designer.cs">
+      <DependentUpon>ToplananPcGetir.cs</DependentUpon>
+    </Compile>
     <Compile Include="With_ComputerDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -109,6 +115,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ToplananPcGetir.resx">
+      <DependentUpon>ToplananPcGetir.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
