--- a/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
+++ b/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
@@ -78,6 +78,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobotFormu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RobotFormu.Designer.cs">
+      <DependentUpon>RobotFormu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sql_degiskenleri\Sql_operation.cs" />
     <Compile Include="ToplananPcGetir.cs">
       <SubType>Form</SubType>
@@ -115,6 +121,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RobotFormu.resx">
+      <DependentUpon>RobotFormu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ToplananPcGetir.resx">
       <DependentUpon>ToplananPcGetir.cs</DependentUpon>
     </EmbeddedResource>
