--- a/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
+++ b/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu/Bilgisayar Toplama Otomasyonu.csproj
@@ -84,6 +84,12 @@
     <Compile Include="RobotFormu.Designer.cs">
       <DependentUpon>RobotFormu.cs</DependentUpon>
     </Compile>
+    <Compile Include="sifremiUnuttum.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sifremiUnuttum.Designer.cs">
+      <DependentUpon>sifremiUnuttum.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sql_degiskenleri\Sql_operation.cs" />
     <Compile Include="ToplananPcGetir.cs">
       <SubType>Form</SubType>
@@ -123,6 +129,9 @@
     </Compile>
     <EmbeddedResource Include="RobotFormu.resx">
       <DependentUpon>RobotFormu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sifremiUnuttum.resx">
+      <DependentUpon>sifremiUnuttum.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ToplananPcGetir.resx">
       <DependentUpon>ToplananPcGetir.cs</DependentUpon>
